--- a/projects-web.html
+++ b/projects-web.html
@@ -314,6 +314,17 @@
             <span class="project-tag web">JavaScript</span>
           </div>
         </div>
+        <div class="project-card">
+          <div class="project-title">BWStory prototype</div>
+          <div class="project-date"></div>
+          <div class="project-desc">A prototype for an assignment, built using HTML, CSS, and JavaScript.</div>
+          <div class="project-tags-row">
+            <span class="project-tag web">HTML</span>
+            <span class="project-tag web">CSS</span>
+            <span class="project-tag web">JavaScript</span>
+            <span class="project-tag web">Prototype</span>
+          </div>
+        </div>
       </div>
     </section>
   </main>
@@ -433,6 +444,8 @@
           document.getElementById('modalView').onclick = function() { window.open('https://amankuamr.github.io/Locker/', '_blank'); };
         } else if (title === 'Portfolio') {
           document.getElementById('modalView').onclick = function() { window.open('https://amankuamr.github.io/Aman-Kumar/', '_blank'); };
+        } else if (title === 'BWStory prototype') {
+          document.getElementById('modalView').onclick = function() { window.open('https://amankuamr.github.io/BWStory/', '_blank'); };
         } else {
           document.getElementById('modalView').onclick = function() { alert('Demo link not set.'); };
         }
