--- a/index.html
+++ b/index.html
@@ -851,6 +851,16 @@
                 <div class="timeline-view-desc">A Twitter-type clone with added chatting features.</div>
               </div>
             </div>
+            <div class="timeline-view-item right">
+              <div class="timeline-view-dot"></div>
+              <div class="timeline-view-content right">
+                <div class="timeline-view-date">4 July 2025</div>
+                <div class="timeline-view-project">BWStory</div>
+                <span class="timeline-tag uiux">UI/UX</span>
+                <span class="timeline-tag web">Web</span>
+                <div class="timeline-view-desc">UI/UX and web prototype for BWStory, prototyped in Figma and built with HTML, CSS, and JavaScript.</div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -1174,6 +1184,8 @@
             img = '<img src="images/timeline/portfolio2.png" alt="Portfolio Website" style="max-width:400px;max-height:400px;display:block;margin:auto;">';
           } else if (project === 'Portfolio') {
             img = '<img src="images/timeline/portfolio2.png" alt="Portfolio" style="max-width:400px;max-height:400px;display:block;margin:auto;">';
+          } else if (project === 'BWStory') {
+            img = '<img src="images/timeline/BWStory.png" alt="BWStory" style="max-width:400px;max-height:400px;display:block;margin:auto;">';
           }
           if (img) {
             floatBoxContent.innerHTML = img;
