--- a/projects-uiux.html
+++ b/projects-uiux.html
@@ -286,7 +286,7 @@
         </div>
         <div class="project-card">
           <div class="project-title">BWStory UI/Redesign</div>
-          <div class="project-date"> </div>
+          <div class="project-date">4 July 2025</div>
           <div class="project-desc">UI/UX redesign for BWStory, prototyped in Figma.</div>
           <div style="margin-top:0.5em;">
             <span class="project-tag figma">Figma</span>
