--- a/projects-web.html
+++ b/projects-web.html
@@ -316,7 +316,7 @@
         </div>
         <div class="project-card">
           <div class="project-title">BWStory prototype</div>
-          <div class="project-date"></div>
+          <div class="project-date">4 July 2025</div>
           <div class="project-desc">A prototype for an assignment, built using HTML, CSS, and JavaScript.</div>
           <div class="project-tags-row">
             <span class="project-tag web">HTML</span>
