--- a/projects-web.html
+++ b/projects-web.html
@@ -325,6 +325,19 @@
             <span class="project-tag web">Prototype</span>
           </div>
         </div>
+        <div class="project-card">
+          <div class="project-title">Pixels</div>
+          <div class="project-date">8 July 2025</div>
+          <div class="project-desc">A social media app.</div>
+          <div class="project-tags-row">
+            <span class="project-tag web">HTML</span>
+            <span class="project-tag web">CSS</span>
+            <span class="project-tag web">JavaScript</span>
+            <span class="project-tag web">Firebase</span>
+            <span class="project-tag web">Authentication</span>
+            <span class="project-tag web">Social Media</span>
+          </div>
+        </div>
       </div>
     </section>
   </main>
@@ -446,6 +459,8 @@
           document.getElementById('modalView').onclick = function() { window.open('https://amankuamr.github.io/Aman-Kumar/', '_blank'); };
         } else if (title === 'BWStory prototype') {
           document.getElementById('modalView').onclick = function() { window.open('https://amankuamr.github.io/BWStory/', '_blank'); };
+        } else if (title === 'Pixels') {
+          document.getElementById('modalView').onclick = function() { window.open('https://amankuamr.github.io/Pixels/', '_blank'); };
         } else {
           document.getElementById('modalView').onclick = function() { alert('Demo link not set.'); };
         }
