--- a/index.html
+++ b/index.html
@@ -870,6 +870,15 @@
                 <div class="timeline-view-desc">A social media app.</div>
               </div>
             </div>
+            <div class="timeline-view-item right">
+              <div class="timeline-view-dot"></div>
+              <div class="timeline-view-content right">
+                <div class="timeline-view-date">15 July 2025</div>
+                <div class="timeline-view-project">Moviez</div>
+                <span class="timeline-tag web">Web</span>
+                <div class="timeline-view-desc">A movie information and discovery web app.</div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -1257,6 +1266,8 @@
             img = '<img src="images/timeline/BWStory.png" alt="BWStory" style="max-width:400px;max-height:400px;display:block;margin:auto;">';
           } else if (project === 'Pixels') {
             img = '<img src="images/timeline/pixels.png" alt="Pixels" style="max-width:400px;max-height:400px;display:block;margin:auto;">';
+          } else if (project === 'Moviez') {
+            img = '<img src="images/timeline/moviez.png" alt="Moviez" style="max-width:400px;max-height:400px;display:block;margin:auto;">';
           }
           if (img) {
             floatBoxContent.innerHTML = img;
