--- a/projects-uiux.html
+++ b/projects-uiux.html
@@ -284,6 +284,15 @@
             <span class="project-tag">Mobile UI</span>
           </div>
         </div>
+        <div class="project-card" data-title="Moviez" data-tag="UI/UX Design">
+          <div class="project-title">Moviez</div>
+          <div class="project-date">2025</div>
+          <div class="project-desc">A movie information and discovery web app.</div>
+          <div style="margin-top:0.5em;">
+            <span class="project-tag figma">Figma</span>
+            <span class="project-tag">UI/UX</span>
+          </div>
+        </div>
         <div class="project-card">
           <div class="project-title">BWStory UI/Redesign</div>
           <div class="project-date">4 July 2025</div>
@@ -422,6 +431,13 @@
           document.getElementById('modalDefaultActions').style.display = 'flex';
           document.getElementById('modalView').onclick = function() { window.open('https://www.figma.com/proto/zzi5gTAtTssp64YYucCVTw/project?node-id=398-2&t=S1NjKN7WvByqpRVG-1', '_blank'); };
           document.getElementById('modalSource').onclick = function() { alert('Source link not set.'); };
+        } else if (title === 'Moviez') {
+          document.getElementById('modalPortfolioActions').style.display = 'none';
+          document.getElementById('modalDefaultActions').style.display = 'flex';
+          document.getElementById('modalView').onclick = function() { window.open('https://amankuamr.github.io/Moviez', '_blank'); };
+          var sourceBtn = document.getElementById('modalSource');
+          sourceBtn.textContent = 'Design';
+          sourceBtn.onclick = function() { window.open('https://www.figma.com/design/JbiVrQtZ7C6YIU4SvP8JgK/Prototype?node-id=398-2&p=f', '_blank'); };
         } else {
           document.getElementById('modalPortfolioActions').style.display = 'none';
           document.getElementById('modalDefaultActions').style.display = 'flex';
