--- a/index.html
+++ b/index.html
@@ -876,6 +876,7 @@
                 <div class="timeline-view-date">15 July 2025</div>
                 <div class="timeline-view-project">Moviez</div>
                 <span class="timeline-tag web">Web</span>
+                <span class="timeline-tag uiux">UI/UX</span>
                 <div class="timeline-view-desc">A movie information and discovery web app.</div>
               </div>
             </div>
