--- a/projects-uiux.html
+++ b/projects-uiux.html
@@ -247,6 +247,14 @@
     </section>
     <section>
       <div class="projects-list">
+        <div class="project-card" data-title="Moviez" data-tag="UI/UX Design">
+          <div class="project-title">Moviez</div>
+          <div class="project-date">11th July 2025</div>
+          <div class="project-desc">A movie information and discovery web app.</div>
+          <div style="margin-top:0.5em;">
+            <span class="project-tag figma">Figma</span>
+          </div>
+        </div>
         <div class="project-card">
           <div class="project-title">Portfolio Project</div>
           <div class="project-date">20 Dec 2024, 14 Feb 2025</div>
@@ -282,15 +290,6 @@
           <div style="margin-top:0.5em;">
             <span class="project-tag figma">Figma</span>
             <span class="project-tag">Mobile UI</span>
-          </div>
-        </div>
-        <div class="project-card" data-title="Moviez" data-tag="UI/UX Design">
-          <div class="project-title">Moviez</div>
-          <div class="project-date">2025</div>
-          <div class="project-desc">A movie information and discovery web app.</div>
-          <div style="margin-top:0.5em;">
-            <span class="project-tag figma">Figma</span>
-            <span class="project-tag">UI/UX</span>
           </div>
         </div>
         <div class="project-card">
@@ -437,7 +436,7 @@
           document.getElementById('modalView').onclick = function() { window.open('https://amankuamr.github.io/Moviez', '_blank'); };
           var sourceBtn = document.getElementById('modalSource');
           sourceBtn.textContent = 'Design';
-          sourceBtn.onclick = function() { window.open('https://www.figma.com/design/JbiVrQtZ7C6YIU4SvP8JgK/Prototype?node-id=398-2&p=f', '_blank'); };
+          sourceBtn.onclick = function() { window.open('https://www.figma.com/proto/4ape8cXUQTdsbIITduIfPX/Untitled?page-id=0%3A1&node-id=1-2&p=f&viewport=311%2C204%2C0.41&t=HA3dTa6vGpPgcS2y-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=1%3A2', '_blank'); };
         } else {
           document.getElementById('modalPortfolioActions').style.display = 'none';
           document.getElementById('modalDefaultActions').style.display = 'flex';
