--- a/projects-web.html
+++ b/projects-web.html
@@ -247,18 +247,21 @@
     </section>
     <section>
       <div class="projects-list">
+        <!-- 1. Pixels -->
         <div class="project-card">
-          <div class="project-title">Cognite</div>
-          <div class="project-date">24 June 2025</div>
-          <div class="project-desc">A modern chatting app for real-time conversations.</div>
+          <div class="project-title">Pixels</div>
+          <div class="project-date">8 July 2025</div>
+          <div class="project-desc">A social media app.</div>
           <div class="project-tags-row">
             <span class="project-tag web">HTML</span>
             <span class="project-tag web">CSS</span>
             <span class="project-tag web">JavaScript</span>
             <span class="project-tag web">Firebase</span>
             <span class="project-tag web">Authentication</span>
+            <span class="project-tag web">Social Media</span>
           </div>
         </div>
+        <!-- 2. Moviez -->
         <div class="project-card">
           <div class="project-title">Moviez</div>
           <div class="project-date">10 July 2025</div>
@@ -271,6 +274,7 @@
             <span class="project-tag web">Responsive</span>
           </div>
         </div>
+        <!-- 3. Shot Chat -->
         <div class="project-card">
           <div class="project-title">ShotChat</div>
           <div class="project-date">28 June 2025</div>
@@ -282,7 +286,44 @@
             <span class="project-tag web">Firebase</span>
             <span class="project-tag web">Authentication</span>
           </div>
-                  </div>
+        </div>
+        <!-- 4. Cognite -->
+        <div class="project-card">
+          <div class="project-title">Cognite</div>
+          <div class="project-date">24 June 2025</div>
+          <div class="project-desc">A modern chatting app for real-time conversations.</div>
+          <div class="project-tags-row">
+            <span class="project-tag web">HTML</span>
+            <span class="project-tag web">CSS</span>
+            <span class="project-tag web">JavaScript</span>
+            <span class="project-tag web">Firebase</span>
+            <span class="project-tag web">Authentication</span>
+          </div>
+        </div>
+        <!-- 5. BWStory prototype -->
+        <div class="project-card">
+          <div class="project-title">BWStory prototype</div>
+          <div class="project-date">4 July 2025</div>
+          <div class="project-desc">A prototype for an assignment, built using HTML, CSS, and JavaScript.</div>
+          <div class="project-tags-row">
+            <span class="project-tag web">HTML</span>
+            <span class="project-tag web">CSS</span>
+            <span class="project-tag web">JavaScript</span>
+            <span class="project-tag web">Prototype</span>
+          </div>
+        </div>
+        <!-- 6. Portfolio -->
+        <div class="project-card">
+          <div class="project-title">Portfolio</div>
+          <div class="project-date">2 June 2025</div>
+          <div class="project-desc">A personal portfolio website showcasing my work.</div>
+          <div class="project-tags-row">
+            <span class="project-tag web">HTML</span>
+            <span class="project-tag web">CSS</span>
+            <span class="project-tag web">JavaScript</span>
+          </div>
+        </div>
+        <!-- 7. The rest -->
         <div class="project-card">
           <div class="project-title">Password Manager</div>
           <div class="project-date">8 August 2024</div>
@@ -293,7 +334,7 @@
             <span class="project-tag web">JavaScript</span>
             <span class="project-tag web">Firebase</span>
           </div>
-                  </div>
+        </div>
         <div class="project-card">
           <div class="project-title">File Format Converter</div>
           <div class="project-date">16 October 2024</div>
@@ -314,40 +355,6 @@
             <span class="project-tag web">JavaScript</span>
             <span class="project-tag web">Firebase</span>
             <span class="project-tag web">Cloudinary</span>
-          </div>
-        </div>
-        <div class="project-card">
-          <div class="project-title">Portfolio</div>
-          <div class="project-date">2 June 2025</div>
-          <div class="project-desc">A personal portfolio website showcasing my work.</div>
-          <div class="project-tags-row">
-            <span class="project-tag web">HTML</span>
-            <span class="project-tag web">CSS</span>
-            <span class="project-tag web">JavaScript</span>
-          </div>
-        </div>
-        <div class="project-card">
-          <div class="project-title">BWStory prototype</div>
-          <div class="project-date">4 July 2025</div>
-          <div class="project-desc">A prototype for an assignment, built using HTML, CSS, and JavaScript.</div>
-          <div class="project-tags-row">
-            <span class="project-tag web">HTML</span>
-            <span class="project-tag web">CSS</span>
-            <span class="project-tag web">JavaScript</span>
-            <span class="project-tag web">Prototype</span>
-          </div>
-        </div>
-        <div class="project-card">
-          <div class="project-title">Pixels</div>
-          <div class="project-date">8 July 2025</div>
-          <div class="project-desc">A social media app.</div>
-          <div class="project-tags-row">
-            <span class="project-tag web">HTML</span>
-            <span class="project-tag web">CSS</span>
-            <span class="project-tag web">JavaScript</span>
-            <span class="project-tag web">Firebase</span>
-            <span class="project-tag web">Authentication</span>
-            <span class="project-tag web">Social Media</span>
           </div>
         </div>
       </div>
