--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
 <body>
     <div class="page-transition"></div>
   <nav class="navbar">
-    <div class="nav-logo"><img src="images/signature.png" alt="Signature" style="height:40px;"></div>
+    <a href="index.html" class="nav-logo"><img src="images/signature.png" alt="Signature" style="height:40px;"></a>
     <ul class="nav-links">
       <li><a href="index.html">Home</a></li>
       <li><a href="skills.html">Skills</a></li>
