--- a/projects-graphic.html
+++ b/projects-graphic.html
@@ -190,7 +190,7 @@
 </head>
 <body>
   <nav class="navbar">
-    <div class="nav-logo"><img src="images/signature.png" alt="Signature" style="height:40px;"></div>
+    <a href="index.html" class="nav-logo"><img src="images/signature.png" alt="Signature" style="height:40px;"></a>
     <ul class="nav-links">
       <li><a href="index.html">Home</a></li>
       <li><a href="skills.html">Skills</a></li>
