--- a/moviez-case-study.html
+++ b/moviez-case-study.html
@@ -45,9 +45,13 @@
       border: 1.5px solid #dbeafe;
       transition: background 0.2s, border 0.2s;
     }
-    .case-block:nth-of-type(even) {
-      background: #d0e3ff;
+    .case-block:first-of-type {
+      background: linear-gradient(90deg, #6a11cb 0%, #2575fc 100%);
       border: 1.5px solid #b3d1fa;
+    }
+    .case-block:first-of-type .case-title,
+    .case-block:first-of-type .case-subtitle {
+      color: #fff;
     }
     .case-title {
       font-size: 2.2rem;
