--- a/projects-uiux.html
+++ b/projects-uiux.html
@@ -437,6 +437,10 @@
           var sourceBtn = document.getElementById('modalSource');
           sourceBtn.textContent = 'Design';
           sourceBtn.onclick = function() { window.open('https://www.figma.com/proto/4ape8cXUQTdsbIITduIfPX/Untitled?page-id=0%3A1&node-id=1-2&p=f&viewport=311%2C204%2C0.41&t=HA3dTa6vGpPgcS2y-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=1%3A2', '_blank'); };
+          var caseBtn = document.createElement('button');
+          caseBtn.textContent = 'Case Study';
+          caseBtn.onclick = function() { window.location.href = 'moviez-case-study.html'; };
+          document.getElementById('modalDefaultActions').appendChild(caseBtn);
         } else {
           document.getElementById('modalPortfolioActions').style.display = 'none';
           document.getElementById('modalDefaultActions').style.display = 'flex';
